--- a/micronaut-htt-service/src/main/resources/application.yml
+++ b/micronaut-htt-service/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 micronaut:
   application:
     name: micronaut-htt-service
+
+jackson:
+  serializationInclusion: ALWAYS
+  bean-introspection-module: true
+  serialization:
+    failOnEmptyBeans: false
